Fixed issue Tab's text on hover in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -280,5 +280,5 @@ button.clipboard:focus {
 
 [data-theme="dark"] .nav-link,
 [data-theme="dark"] .nav-link:hover {
-  color: #f2f3f4;
+  color: #495057;
 }
